--- a/GestureRecognition/res/layout/activity_main.xml
+++ b/GestureRecognition/res/layout/activity_main.xml
@@ -4,14 +4,6 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity" >
 
-    <TextView
-        android:id="@+id/textView1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:text="@string/hello_world" />
-
     <Button
         android:id="@+id/button1"
         android:layout_width="wrap_content"
@@ -31,5 +23,15 @@
         android:layout_marginLeft="16dp"
         android:text="Demo"
         android:onClick="demo" />
+
+    <ListView
+        android:id="@+id/StoredVideoLV"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/button2"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true" >
+
+    </ListView>
 
 </RelativeLayout>
