--- a/GestureRecognition/res/layout/demo.xml
+++ b/GestureRecognition/res/layout/demo.xml
@@ -1,32 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:opencv="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
-    <VideoView
-        android:id="@+id/videoView1"
+    <org.opencv.android.JavaCameraView
+        android:id="@+id/puzzle_activity_surface_view"
+        android:layout_width="fill_parent"
+        android:layout_height="33dp"
+        android:layout_weight="0.08"
+        opencv:camera_id="back" />
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="113dp" />
-
-    <Button
-        android:id="@+id/button1"
-        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Capture"
-      	android:onClick="cap" />
+        android:layout_weight="0.50" >
 
-    <ImageView
-        android:id="@+id/imageView1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/ic_launcher" />
+        <Button
+            android:id="@+id/button1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="cap"
+            android:text="Capture" />
 
-    <Button
-        android:id="@+id/button2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Erode"
-        android:onClick="erode" />
+        <Button
+            android:id="@+id/button2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="stop"
+            android:text="Stop" />
+
+        <Button
+            android:id="@+id/button3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="process"
+            android:text="Process" />
+    </LinearLayout>
 
 </LinearLayout>
